[package]
name = "threemf"
version = "0.6.0"

edition = "2021"
rust-version = "1.56"

description = "3MF (3D Manufacturing Format) file format support"
license = "0BSD"
keywords = ["3MF", "CAD", "slicer", "triangle", "mesh"]
categories = ["encoding", "rendering::data-formats"]

readme = "README.md"
repository = "https://github.com/hannobraun/3mf-rs"


[dependencies]
quick-xml = { version = "0.37.1", features = ["serialize"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "2.0.3"

[dependencies.zip]
version = "2.1.0"
default-features = false
features = ["deflate"]
