[package]
name = "threemf"
version = "0.7.0"

edition = "2021"
rust-version = "1.56"

description = "3MF (3D Manufacturing Format) file format support"
license = "0BSD"
keywords = ["3MF", "CAD", "slicer", "triangle", "mesh"]
categories = ["encoding", "rendering::data-formats"]

readme = "README.md"
repository = "https://github.com/hannobraun/3mf-rs"


[dependencies]
quick-xml = { version = "0.37.0", features = ["serialize"] }
instant-xml = { git = "https://github.com/djc/instant-xml.git", branch = "main" }
#instant-xml = { version = "0.5.2" }
instant-xml-macros = { version = "0.5.2" }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "2.0.3"

[dependencies.zip]
version = "2.1.0"
default-features = false
features = ["deflate"]

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }
collapse = { version = "0.1.2" }
